[package]
name = "matrixstack"
version = "0.1.0"
authors = ["Mark Hintz <markinportland7@gmail.com>"]
license = "MIT"
description = "A simple pushdown matrix stack using cgmath matrices"
repository = "https://github.com/mhintz/matrixstack-rs"
readme = "README.md"
keywords = ["matrix", "stack", "cgmath"]

[dependencies]
cgmath = "0.8.0"
num = "0.1"
