[package]
name = "matrixstack"
version = "0.1.4"
authors = ["Mark Hintz <markinportland7@gmail.com>"]
license = "MIT"
description = "A simple pushdown matrix stack using cgmath matrices"
repository = "https://github.com/mhintz/matrixstack-rs"
readme = "README.md"
keywords = ["matrix", "stack", "cgmath"]

[dependencies]
cgmath = "^0.10.0"
num-traits = "0.1"
